career page: slide5 editing bug. No-wrap

--- a/test_page/career/css/style.css
+++ b/test_page/career/css/style.css
@@ -236,6 +236,6 @@
     box-shadow: 0px 2px 1px 1px #EEEEEE;
 }
 
-.job-card {
+/*.job-card {
     height: 61vh;
-}
+}*/
